# customer-reviews-tool-calling-agent

./: .gitignore  README.md  databricks.yml  pyproject.toml
00-data-prep/: amazon-reviews-from-marketplace.ipynb
01-vector-search/: 00-vector-search.create.amazon-reviews.ipynb  01-vector-search-sql.dbquery.ipynb  01-vector-search-sql.ipynb
02-agent/: 00-create-tools.ipynb  01-create-agent.ipynb  agent.py
03-app/: 01-deploy-lakehouse-app.py
03-app/src/: api.py  app.py  app.yaml  utils.py
03-app/src/.streamlit/: config.toml
