[project]
name = "customer-reviews-tool-calling-agent"
version = "0.1.0"
description = "A tool calling agent for analyzing customer reviews"
requires-python = ">=3.11,<3.12"
authors = [
    {name = "Juan Lamadrid", email = "juan.lamadrid@databricks.com"}
]

dependencies = [
    "mlflow>=2.10.0",
    "databricks-sdk>=0.12.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.1.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "databricks-langchain>=0.1.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages.find.include = ["02-agent"]

